--- a/google.css
+++ b/google.css
@@ -3,3 +3,67 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
+#searchbar {
+    width: 580px;
+    margin: 150px auto 0;
+    text-align: center
+
+}
+}
+nav#Headings ul li button.sign-in {
+    background:#4285f4;
+    color: #FFF;
+    border: solid 1px #aaa;
+    border-radius: 4px;
+    padding: 5x;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0 5px;
+    width: 75px;
+    height: 33px;
+}
+li {
+    display: inline;
+  }
+ input[type="Search"] {
+    width: 100%;
+    height: 40px;
+    padding: 3px 4px;
+    margin: 25px 0 30px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 0px 0px 1p #c8caca;
+    border-radius: 40px;
+}   
+ input[type="Search"]:hover{
+    border-color: #c8caca transparent;
+ }
+ input[type="submit"] {
+    background: rgb(240, 241, 241);
+    color: #777;
+    border: solid 1px #aaa;
+    border-radius: 4px;
+    padding: 5x;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0 5px;
+    width: 150px;
+    height: 33px;
+}
+input[type="submit"]:hover {
+    cursor: pointer;
+}
+nav#Headings ul li {
+    display: inline;
+}
+footer {
+    text-align: left center;
+    background: #eee;
+    position: fixed;
+    bottom: 3px;
+    height: auto;
+    width: 100%;
+}
+
+footer nav{
+    padding: 20px;
+}
